src/test/resources/org/nest/nestml/_cocos/invalid/vectorVariableInNonVectorDeclaration.nestml
neuron AliasInDecl:
  parameters:
    n  integer
    function three integer[n] = 3 # should be an error?
    threePlusFour integer = three + 4
  end

  function set_three(v integer):

  end
end
